# TreeFinder

./: CMakeLists.txt  README.md
Report/: report.aux  report.tex
data/: dictionary.yml  svm_classifier.yml
include/: main.cpp
report/: .tex  report.aux  report.tex
report/img/before/: no_prep_0_48_0.aux
src/: bag_of_leaves.h  svm_binary_classifier.h  tree_finder.h
